--- a/sentube/WebContent/modules/videos/css/module.css
+++ b/sentube/WebContent/modules/videos/css/module.css
@@ -10,7 +10,7 @@
 }
 
 .video-info > h1 {
-	margin-top:-0.40625em;margin-bottom:0.25em;padding:0.203125em;line-height:1.625em;font-size:150%;font-weight:bold;
+	width:90%;margin-top:-0.40625em;margin-bottom:0.25em;padding:0.203125em;line-height:1.625em;font-size:150%;font-weight:bold;
 }
 
 .video-info .author a {
