--- a/WebContent/templates/modern/css/template.css
+++ b/WebContent/templates/modern/css/template.css
@@ -216,16 +216,6 @@ body {
 
 :focus {outline:none;}
 
-  
-.scrollToTop{
-  background-color: #d42323;
-  color: #fff;
-}
-.scrollToTop:hover,.scrollToTop:focus{  
-  color: #d42323;
-  border-color: 1px solid #d42323;
-}
-
 .page-title {
 	margin-top : 49px;
 	text-align : center;
@@ -359,34 +349,18 @@ img{
        -o-transition: all 0.5s; /* 10.5 < Op < 12.1 */
           transition: all 0.5s; /* IE 10, Ch 26+, Fx 16+, Op 12*/
 }
-/*scrol to top*/
+/*scroll to top*/
 
-.scrollToTop {
-  bottom: 40px;
-  display: none;
-  font-size: 2rem;
-  font-weight: bold;
-  height: 50px;
-  position: fixed;
-  right: 40px;
-  text-align: center;
-  text-decoration: none;
-  width: 50px;
-  z-index: 9;
-  border:1px solid;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  border-radius : 50%;
-  line-height : 45px;
+.scrollToTop{
+  background-color: #d42323;
+  color: #fff;
 }
 
 .scrollToTop:hover, .scrollToTop:focus{
-  text-decoration: none;
-  outline: none;
   background-color: #fff;
+  color: #d42323;
+  border-color: 1px solid;
+  border : 1px solid;
 }
 
 /*--------------------*/
