--- a/WebContent/templates/modern/css/template.css
+++ b/WebContent/templates/modern/css/template.css
@@ -208,12 +208,6 @@ html{
 	line-height : 1.625;
 }
 
-body {
-	font-family : Roboto;
-	font-size : 100%;
-	opacity : 0;
-}
-
 :focus {outline:none;}
 
 .page-title {
@@ -291,24 +285,15 @@ input:-moz-placeholder { /* Firefox 18- */
   font-weight : bold;
 }
 
-/* Table of Content
-==================================================
-  #BASIC TYPOGRAPHY
-  #HEADER
-  #FOOTER
-  #RESPONSIVE STYLE
-*/
-
-
-/*--------------------*/
-/* BASIC TYPOGRAPHY */
-/*--------------------*/
-
 body {  
   color: #000;
   background-color: #f0f0f0;
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   font-family: Roboto, sans-serif;  
+  font-size : 100%;
+  opacity : 0;
+  margin : 0;
+  padding : 0;
 }
 
 input,textarea,select {
@@ -363,11 +348,6 @@ img{
   border-color: 1px solid;
   border : 1px solid;
 }
-
-/*--------------------*/
-/* Header */
-/*--------------------*/
-
 
 .navbar-brand{
   font-size: 175%;
@@ -678,11 +658,6 @@ main {
 #alert-dialog-container > div {
     border: 1px solid #cc181e;
 }
-
-
-/*--------------------*/
-/* Footer */
-/*--------------------*/
 
 #footer {
   background-color: #fff;
